# Launchpad-TinyTroupe

./: .gitignore  CLAUDE.md  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  README.md  config.ini  main.py  main_backup.py  openrouter_usage_example.py  project.json  requirements.txt  test_image_integration.py  test_image_upload.py
apps/api/agents/: enhanced_persona_template.agent.json
apps/api/dev_docs/: API_Testing_Log.md  Customer_Intervention_Testing_API.md  TinyTroupe_API_Implementation_Review.md  TinyTroupe_MVP_Architecture.md
apps/api/docs/: TinyTroupe_API_Core_v1_Documentation.md  TinyTroupe_API_Design_Patterns.md
apps/web/: Frontend_Implementation_Analysis.md  package.json  project.json  tsconfig.json
apps/web/src/app/: page.tsx
dev_docs/nx-repo/: PRD_TinyTroupe_Nx_Monorepo.md
dev_docs/tinytroupe/real_estate/: PRD_TinyTroupe_Microservice.md
dev_docs/tinytroupe/v1_mvp/: Enhanced_MVP_Specification.md  FastAPI_Implementation.md  Persona_Templates.md  README.md  TinyTroupe_Usage_Patterns_Analysis.md  Validation_Plan.md  activepieces_workflow_nodes.md  api_implementation.py  deployment_and_testing.md  mcp_server_specification.md
dev_docs/tinytroupe/v2/: API_Specification.md  Cross_Industry_Data_Schema.md  DSPy_Integration_Spec.md  PRD_Calibrated_Intervention_Platform.md
libs/api-client/: package.json  project.json  tsconfig.json
libs/api-client/src/: client.ts  index.ts  schemas.ts  types.ts
libs/tinytroupe-core/: README.md  project.json  pyproject.toml  tinytroupe
tools/scripts/: start-dev.sh
(+103 files in other folders)
