[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinytroupe-core"
version = "0.5.1"
description = "TinyTroupe: AI-powered persona simulation for market research"
authors = [
    {name = "Microsoft Research", email = "tinytroupe@microsoft.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.3.8",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "pydantic>=2.5.0",
    "python-docx>=1.1.0",
    "chevron>=0.14.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tinytroupe*"]

[tool.setuptools.package-data]
tinytroupe = ["**/*.mustache", "**/*.md", "**/*.json", "config.ini"]